# reindeer-local-buildrs-issue-demo

./: .buckconfig  .gitignore  .gitmodules  README.md  run_reindeer.sh
project/: BUCK  Cargo.toml  reindeer.toml
project/crates/my_bin/: Cargo.toml
project/crates/my_buildrs/: Cargo.toml  build.rs
project/crates/my_buildrs/src/: lib.rs
project/fixups/my_buildrs/: fixups.toml
project/fixups/thiserror/: fixups.toml
toolchains/: BUCK
